# ufo_ipc

./: Cargo.toml
src/: child.rs  endpoint.rs  err.rs  lib.rs  pipe.rs  protocol.rs  serialization.rs  starter.rs
